--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TileControl/TileControlPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TileControl/TileControlPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.MosaicControlPage"
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.TileControlPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -36,7 +36,7 @@
                    HorizontalAlignment="Center"
                    FontSize="20"
                    Text="MosaicControl can be used to highlight computer activity:" />
-        <controls:MosaicControl Grid.Row="1"
+        <controls:TileControl Grid.Row="1"
                                 AnimationDuration="{Binding AnimationDuration.Value, Mode=OneWay}"
                                 AnimationStepX="{Binding AnimationStepX.Value, Mode=OneWay}"
                                 AnimationStepY="{Binding AnimationStepY.Value, Mode=OneWay}"
@@ -51,14 +51,14 @@
                 <TextBlock Style="{StaticResource TextBlockStyle}"
                            Text="Processing, please wait..." />
             </Border>
-        </controls:MosaicControl>
+        </controls:TileControl>
 
         <TextBlock Grid.Row="2"
                    Margin="10,20"
                    HorizontalAlignment="Center"
                    FontSize="20"
                    Text="It can also be used for background painting:" />
-        <controls:MosaicControl Grid.Row="3"
+        <controls:TileControl Grid.Row="3"
                                 Background="{StaticResource Brush-Grey-04}"
                                 ImageSource="ms-appx:///SamplePages/MosaicControl/Animations.png"
                                 ParallaxSpeedRatio="{Binding ParallaxSpeedRatio.Value, Mode=OneWay}"
@@ -76,7 +76,7 @@
                 </Border>
 
             </FlipView>
-        </controls:MosaicControl>
+        </controls:TileControl>
 
     </Grid>
 </Page>
