--- a/Microsoft.Toolkit.Uwp.UI.Controls/TileControl/TileControl.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/TileControl/TileControl.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
-    <Style TargetType="controls:MosaicControl">
+    <Style TargetType="controls:TileControl">
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="controls:MosaicControl">
+                <ControlTemplate TargetType="controls:TileControl">
                     <Grid>
                         <Border x:Name="RootElement"
                                 Background="{TemplateBinding Background}"
