--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -307,21 +307,17 @@
                             <VisualStateGroup x:Name="ExpandedStates">
                                 <VisualState x:Name="Expanded">
                                     <VisualState.Setters>
-                                        <Setter Target="PART_MainContentRow.Height" Value="Auto" />
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
                                     </VisualState.Setters>
                                 </VisualState>
-                                <VisualState x:Name="Collapsed">
-                                    <VisualState.Setters>
-                                        <Setter Target="PART_MainContentRow.Height" Value="0" />
-                                    </VisualState.Setters>
-                                </VisualState>
+                                <VisualState x:Name="Collapsed" />
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
                         
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" x:Name="PART_MainContentRow" />
+                                <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             
                             <ToggleButton x:Name="PART_ExpanderToggleButton" Height="40"
@@ -330,9 +326,10 @@
                                           ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}"
                                           IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" />
                             
-                            <ContentPresenter Grid.Row="1" 
+                            <ContentPresenter Grid.Row="1" x:Name="PART_MainContent"
                                               HorizontalAlignment="{Binding HorizontalContentAlignment}"
-                                              HorizontalContentAlignment="Stretch" />
+                                              HorizontalContentAlignment="Stretch"
+                                              Visibility="Collapsed" />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
