--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxMask/TextBoxMaskPage.xaml
@@ -29,8 +29,8 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
 
-            <TextBox controls:TextBoxMask.Mask="9a9a-a9a*"
-                     Header="Text box with Mask 9a9a-a9a* (9 allows from 0 to 9, a allow from a to Z and * allows both a and 9) with initial value"
+            <TextBox controls:TextBoxMask.Mask="9a9a--a9a*"
+                     Header="Text box with Mask 9a9a--a9a* (9 allows from 0 to 9, a allow from a to Z and * allows both a and 9) with initial value"
                      HeaderTemplate="{StaticResource HeaderTemplate}"
                      Style="{StaticResource MaskedTextBoxStyle}"
                      Text="TextBoxMask" />
