--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PrintHelper/PrintHelperPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/PrintHelper/PrintHelperPage.xaml
@@ -18,6 +18,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid x:Name="Container"
                   Grid.RowSpan="2"
@@ -57,6 +58,7 @@
                         Click="DirectPrint_Click"
                         Content="Direct Print Me!" />
             </StackPanel>
+            <TextBlock Grid.Row="2" HorizontalAlignment="Center">Direct Print will print the content without removing it from the visual tree (in place).</TextBlock>
         </Grid>
     </Grid>
 </Page>
