--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Light/LightBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Light/LightBehaviorPage.xaml
@@ -18,6 +18,14 @@
                    Text="Light effects are not available on your version of Windows 10"
                    TextWrapping="Wrap"
                    Visibility="Collapsed" />
+        <TextBlock x:Name="NoCreatorUpdateWarningText"
+                   Margin="0,20"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   Foreground="{ThemeResource TextSelectionHighlightColorThemeBrush}"
+                   Text="Warning: This effect has issues on low end devices if you are not on Creator Update or upper"
+                   TextWrapping="Wrap"
+                   Visibility="Collapsed" />
 
         <Image x:Name="ToolkitLogo"
                Width="100"
