Change Sample page. Use RequestAsync instead of GetUserTimeLineAsync

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -19,6 +19,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -62,6 +63,8 @@
                                HorizontalAlignment="Right"
                                FontWeight="ExtraLight"
                                Text="{x:Bind CreationDate}" />
+                    <Image Grid.Row="3"
+                           Source="{x:Bind Entities.Media[0].MediaUrl}"/>
                 </Grid>
             </Border>
         </DataTemplate>
