--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -87,6 +87,8 @@
                                Text="Sample App" />
                 </StackPanel>
                 <Frame x:Name="NavigationFrame" />
+                <!--Uncomment this control to help you determine where the focus is.
+                This could be useful when validating accessibility of your control-->
                 <local:FocusTracker VerticalAlignment="Bottom" 
                         HorizontalAlignment="Center"
                         IsRunning="True"/>
