Change the photos from png to jpg to save space

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
@@ -65,13 +65,13 @@
             <!--  Items  -->
             <controls:HamburgerMenu.ItemsSource>
                 <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/BigFourSummerHeat.png"
+                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/BigFourSummerHeat.jpg"
                                                      Label="Big four summer heat" />
-                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/BisonBadlandsChillin.png"
+                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/BisonBadlandsChillin.jpg"
                                                      Label="Bison badlands Chillin" />
-                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/GiantSlabInOregon.png"
+                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/GiantSlabInOregon.jpg"
                                                      Label="Giant slab in Oregon" />
-                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/LakeAnnMushroom.png"
+                    <controls:HamburgerMenuGlyphItem Glyph="/Assets/Photos/LakeAnnMushroom.jpg"
                                                      Label="Lake Ann Mushroom" />
                 </controls:HamburgerMenuItemCollection>
             </controls:HamburgerMenu.ItemsSource>
